src/objects/LnP_Custom_Exception__c.object
<CustomObject>
    <description>This object captures all exceptions occurred.</description>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Method__c</fullName>
        <label>Class Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Method__c</fullName>
        <label>Component Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <defaultValue>$User.FirstName &amp; &apos; &apos; &amp; $User.LastName</defaultValue>
        <label>Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Log_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Error Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Status_Code__c</fullName>
        <label>HTTP Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Duration__c</fullName>
        <label>Integration Duration</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>LineNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedJSON__c</fullName>
        <label>RequestedJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_On__c</fullName>
        <label>Requested On</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responded_On__c</fullName>
        <label>Responded On</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseJSON__c</fullName>
        <label>ResponseJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_IP_Address__c</fullName>
        <label>Source IP Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <defaultValue>$Profile.Name</defaultValue>
        <label>User Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <formula>TEXT($User.UserType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Type</label>
        <type>Text</type>
    </fields>
    <label>Custom Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EXC-{000000}</displayFormat>
        <label>Custom Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>